--- a/source/scss/_partial/mq.scss
+++ b/source/scss/_partial/mq.scss
@@ -1,5 +1,5 @@
 main.container {
-    margin: 2em 10px;
+    margin: 4em 10px 5em;
 }
 
 @media screen and (min-width: 700px) {
